Corrected some CSS styles

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,27 @@
 *{
     box-sizing: border-box;
 }
-body{
-    margin: 0px;
-    padding: 0px;
+
+.container {
+    border: 3px solid black;
+    width: 500px;
+    height: 350px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.container{
+.row{
+    height: 344px;
+    width: 30.875px;
+}
+
+.grid{
+    height: 21.5px;
+    border: 1px black solid;
+}
+
+button{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     justify-content: center;
- }
- .grid{
-    border: 2px solid red;
-    flex-basis: 6%;
-    width: 100px;
-    height: 100px;
- }
+}
